--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "cypress": "^3.1.2",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
+    "rc-slider": "^8.6.3",
     "react": "^16.6.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.1",
+    "react-infinite-calendar": "^2.3.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.1",
     "styled-components": "4.0.3",
